--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Suggest an idea for this project
-labels: ["kind/Feature Request"]
+labels: ["kind/feature request"]
 body:
   - type: markdown
     attributes:
