Add Deploy MkDocs Task

--- a/tools/.vscode/tasks.json
+++ b/tools/.vscode/tasks.json
@@ -46,6 +46,20 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Deploy MkDocs: mkdocs gh-deploy",
+            "command": "mkdocs",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "args": [
+                "gh-deploy"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
