--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ extra:
   prefix: cmf
   version:
     release:
-      download_url: https://github.com/clustermod/CMF3/releases/download/v2.1.0/cmf3_2.1.0.zip
+      download_url: https://github.com/clustermod/CMF3/releases/latest
       major: 2
       minor: 1
       patch: 0
@@ -23,12 +23,13 @@ extra:
 nav:
   - Home: index.md
   - Wiki: wiki/index.md
-  - Contributors: contributors.md
+  - CMF3 Contributors: contributors.md
 
 extra_css:
   - styles.css
 theme:
   name: material
+  custom_dir: docs/overrides
   logo: img/logo/cmf3_logo_trans.png
   font:
     text: Open Sans
@@ -39,13 +40,13 @@ theme:
   features:
     - navigation.instant
     - navigation.instant.progress
+    - navigation.tabs.sticky
     - navigation.tabs
     - navigation.path
     - navigation.footer
     - navigation.top
     - content.code.copy
-
-
+    - content.code.annotate
 
 plugins:
   - macros:
@@ -57,3 +58,6 @@ markdown_extensions:
   - pymdownx.superfences
   - attr_list
   - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
