Fixed loadouts folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ __pycache__
 
 # Arma
 mission.sqm
-!framework/rsc/loadouts/!*.sqf
+!framework/rsc/loadouts/*.sqf
 framework/rsc/loadouts/*.sqf
 framework/rsc/scripts/*.sqf
 
