Ignore test loadouts

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ mission.sqm
 framework/rsc/loadouts/*.sqf
 framework/rsc/scripts/*.sqf
 !framework/rsc/loadouts/!*.sqf
-framework/rsc/loadouts/!test*.sqf
+framework/rsc/loadouts/test*.sqf
 
 # Todos and changelogs
 TODO.md
