--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
   - attr_list
-  - def_list
+  - pymdownx.keys
   - md_in_html
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
